package org.example;

public interface AparelhoTelefonico {

    void atender();
    void encerrarLigacao();
    void discar(String numero);
    void recados();

}
