package org.example;

public interface NavegadorInternet {

    void buscar(String url);
    void novaAba();
    void fechar();
    void fecharAba();
    void home();
    void favoritos();
    void voltar();

}
