package org.example;

public interface ReprodutorMusical {

    void play();
    void pause();
    void next();
    void back();

}
